--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "dev": "webpack serve"
   },
   "keywords": [],
